# PrivX

./: LICENSE  README.md  docker-compose.yml  env.template
Client/: .env  Dockerfile  env.sh  index.html  nginx.conf  package-lock.json  package.json
Client/src/: App.tsx  index.css
Client/src/components/: icons.tsx
Client/src/layouts/: Header.tsx
Client/src/pages/: Auth.tsx  Create.tsx  MyPastes.tsx  NotFound.tsx  Read.tsx
Client/src/services/: PasteService.ts  UserService.ts
Server/: .env  Cargo.toml  Dockerfile
Server/resources/: init.sql
Server/src/: main.rs
Server/src/config/: settings.rs
Server/src/db/: init.rs  mod.rs  paste_db_operations.rs  redis_operations.rs  scylla_db_operations.rs
Server/src/handlers/: auth_handlers.rs  mod.rs  paste_handlers.rs  root.rs
Server/src/models/: crypto.rs  mod.rs  paste.rs  paste_vm.rs  user.rs  user_vm.rs
Server/src/routes/: api.rs
Server/src/utils/: helpers.rs
Server/templates/base/: base.html  error.html
Server/templates/paste/: ask_secrets.html  copy_link.html  my_pastes.html  show.html
Server/templates/root/: after_register.html  help.html  index.html  login.html
Server/templates/static/: main.css  override.css  pgp.txt  signature.txt
Worker/: .env  Cargo.toml  Dockerfile
Worker/src/: main.rs
Worker/src/config/: settings.rs
Worker/src/db/: db_operations.rs  db_operations_imlp.rs  mod.rs  redis_operations.rs
Worker/src/handlers/: mod.rs  paste_ids.rs  user_auth.rs
Worker/src/paste_ids/: id.rs  manager.rs  mod.rs  store.rs
Worker/src/utils/: helpers.rs
(+30 files in other folders)
