[package]
name = "IncognitoBin_server"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[[bin]]
name = "IncognitoBin_server"
path = "src/main.rs"

[dependencies]
tera = "1"
once_cell = "1.19.0"
serde_json = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
chrono = { version = "0.4" , features = ["serde"]}
actix-web = "4"
scylla = { version = "0.14.0" , features = [
    "chrono-04",
]}
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4","serde"] }
anyhow = "1.0.86"
futures = "0.3.30"
async-trait = "0.1.82"
reqwest = "0.12.7"
dotenv = "0.15.0"
redis = "0.27.2"
actix-cors = "0.7.0"
actix-files = "0.6"
aes = "0.7.5"
block-modes = "0.8.0"
block-padding = "0.2.1"
hex = "0.4"
generic-array = "0.14"
actix-session = { version = "0.10.1", features = ["redis-session"] }
env_logger = "0.10"
log = "0.4"
regex = "1.9"
rand = "0.8"