[package]
name = "IncognitoBin_worker"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
once_cell = "1.19.0"
serde_json = "1.0.0"
serde = { version = "1.0.0", features = ["derive"] }
chrono = "0.4"
redis = "0.27.2"
rand = "0.8.5"
scylla = { version = "0.14.0" , features = [
    "chrono-04",
]}
anyhow = "1.0.86"
uuid = { version = "1.10.0", features = ["v4","serde"] }
async-trait = "0.1.82"
futures-util = "0.3.30"
futures = "0.3.30"
tokio = {version="1.40.0", features = ["full"] }
dotenv = "0.15.0"

